# django-attribution

./: .pre-commit-config.yaml  README.md  concepts.md  mkdocs.yml  mypy-django.ini  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
django_attribution/: __init__.py  admin.py  attribution_models.py  decorators.py  middlewares.py  mixins.py  models.py  querysets.py  reconciliation.py  settings.py  shortcuts.py  signals.py  trackers.py  types.py  utils.py
django_attribution/migrations/: 0001_initial.py  0002_rename_user_agent_identity_first_visit_user_agent.py  0002_rename_user_identity_linked_user.py  0003_event_delete_conversion_and_more.py  0003_remove_identity_django_attr_trackin_a18ecc_idx_and_more.py  0004_remove_identity_first_ip_address_and_more.py  0007_remove_identity_django_attr_created_fb49e3_idx_and_more.py  0011_identity_unique_canonical_identity_per_user_and_more.py  0013_remove_touchpoint_custom_parameters_and_more.py  0015_remove_conversion_django_attr_convers_920361_idx_and_more.py  0016_identity_django_attr_linked__56cc41_idx_and_more.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
src/django_attribution/: __init__.py  admin.py  apps.py  attribution_models.py  conf.py  decorators.py  exceptions.py  managers.py  middlewares.py  mixins.py  models.py  querysets.py  reconciliation.py  settings.py  shortcuts.py  signals.py  trackers.py  types.py  utils.py
src/django_attribution/migrations/: 0001_initial.py  0005_conversion_updated_at_identity_updated_at_and_more.py  0006_remove_identity_last_visit_at.py  0008_conversion_is_confirmed.py  0009_remove_conversion_is_confirmed_and_more.py  0010_alter_touchpoint_identity.py  0011_identity_unique_canonical_identity_per_user_and_more.py  0012_conversion_is_confirmed.py  0014_touchpoint_fbclid_touchpoint_gclid_touchpoint_igshid_and_more.py
src/django_attribution/tests/: conftest.py  test_settings.py
src/tests/: test_utm_middleware.py
tests/: conftest.py  test_attribution_middleware.py  test_attribution_models.py  test_decorators.py  test_identity_reconciliation.py  test_models.py  test_querysets.py  test_settings.py  test_signals.py  test_tracker.py  test_utm_middleware.py
